updated xanthur earth page

--- a/pages/3D/xanthur_com_earth.html
+++ b/pages/3D/xanthur_com_earth.html
@@ -78,7 +78,34 @@ permalink: /3D/xanthur_com_earth
 
         <div id="content">
             
-            <h1>W.I.P.</h1> 
+            <h1>xanthur.com earth model</h1> 
+            <br>
+            <br>
+            <p>
+                the origin of the spinning earth icon came from the original name i had for this website, fatballs.world <br>
+                i ultimately decided to scrap that name (even if it was awesome) but kept the text spinning around the earth <br>
+                scroll down to see the original fatballs.world earth <br>
+                <br>
+                i can't pinpoint a single point of inspiration, but i'm sure i saw some sort of spinning earth gifs on someone's personal website
+                <br>
+                <br>
+                when i first exported for the web i had a lot of issues trying to optimize this into a long gif,<br>
+                so i ended up opting with using a webm video which has been a great improvement (and a much smaller file size too)
+            </p>
+            <br>
+            <h2>RENDER</h2>
+            <br>
+            <video playsinline autoplay muted loop id="earth_small" src="/video\xanthur-dot-com-60fps-rgba.webm" alt="fatballs.world"  width="75%" fetchpriority="high"></video>
+            <h2>VIEWPORT</h2>
+            <br>
+            <img src="/images/3D/xanthurcomearth/xanthurcomviewport.png" width="75%">
+            <h2>WIREFRAME</h2>
+            <br>
+            <img src="/images/3D/xanthurcomearth/xanthurcomwireframe.png" width="75%">
+            <br>
+            <h2>FATBALLS.WORLD</h2>
+            <br>
+            <video playsinline autoplay muted loop id="earth_small" src="/video/fatballs-world-60fps-rgba.webm" alt="fatballs.world"  width="75%" fetchpriority="high"></video>
 
            
         </div>
