--- a/pages/3D.html
+++ b/pages/3D.html
@@ -95,7 +95,7 @@ permalink: /3D/
                     <br>
                     xanthur.com earth
                     <br>
-                    <a href="/3D/work_in_progress">{info}</a>
+                    <a href="/3D/xanthur_com_earth">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/fatballs satellite.png">
