created satellite page

--- a/pages/3D/xanthur_com_earth.html
+++ b/pages/3D/xanthur_com_earth.html
@@ -90,7 +90,7 @@ permalink: /3D/xanthur_com_earth
                 <br>
                 <br>
                 when i first exported for the web i had a lot of issues trying to optimize this into a long gif,<br>
-                so i ended up opting with using a webm video which has been a great improvement (and a much smaller file size too)
+                so i ended up opting with using a webm video which has been a great improvement in file size and quality (in glorious 60fps too)
             </p>
             <br>
             <h2>RENDER</h2>
