--- a/pages/3D.html
+++ b/pages/3D.html
@@ -102,7 +102,7 @@ permalink: /3D/
                     <br>
                     fatballs satellites
                     <br>
-                    <a href="/3D/work_in_progress">{info}</a>
+                    <a href="/3D/fatballs_satellite">{info}</a>
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/picture frame.png">
