started working on picture frame page

--- a/pages/3D.html
+++ b/pages/3D.html
@@ -103,14 +103,14 @@ permalink: /3D/
                     fatballs satellites
                     <br>
                     <a href="/3D/fatballs_satellite">{info}</a>
-                    
+
                 </td>
                 <td>
                     <img src="/images/3D/thumbnails/picture frame.png">
                     <br>
                     picture frame
                     <br>
-                    <a href="/3D/work_in_progress">{info}</a>
+                    <a href="/3D/picture_frame">{info}</a>
                 </td>
             </tr>
 
