added picture frame render

--- a/pages/3D/picture_frame.html
+++ b/pages/3D/picture_frame.html
@@ -87,6 +87,12 @@ permalink: /3D/picture_frame
             the model was heavily inspired by that one picture frame from half life 2 with the vance family in it
             </p>
             <br>
+            <br>
+            <h2>RENDER</h2>
+            <br>
+            <img src="/images/3D/picture frame/pictureframe.png" width="75%">
+
+            <br>
             
 
         </div>
