--- a/pages/3D.html
+++ b/pages/3D.html
@@ -88,17 +88,17 @@ permalink: /3D/
             <h1>CATALOG</h1> 
             <br>
             <br>
-           <table>
+           <table width="70%">
             <tr>
                 <td>
-                    <img src="/images/3D/thumbnails/xanthurcom.png">
+                    <img src="/images/3D/thumbnails/xanthurcom.png" width="100%">
                     <br>
                     xanthur.com earth
                     <br>
                     <a href="/3D/xanthur_com_earth">{info}</a>
                 </td>
                 <td>
-                    <img src="/images/3D/thumbnails/fatballs satellite.png">
+                    <img src="/images/3D/thumbnails/fatballs satellite.png"  width="100%">
                     <br>
                     fatballs satellites
                     <br>
@@ -106,7 +106,7 @@ permalink: /3D/
 
                 </td>
                 <td>
-                    <img src="/images/3D/thumbnails/picture frame.png">
+                    <img src="/images/3D/thumbnails/picture frame.png"  width="100%">
                     <br>
                     picture frame
                     <br>
@@ -116,21 +116,21 @@ permalink: /3D/
 
             <tr>
                 <td>
-                    <img src="/images/3D/thumbnails/dylan fortnite.png">
+                    <img src="/images/3D/thumbnails/dylan fortnite.png" width="100%">
                     <br>
                     dylan fornite
                     <br>
                     <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
-                    <img src="/images/3D/thumbnails/toyota.png">
+                    <img src="/images/3D/thumbnails/toyota.png" width="100%">
                     <br>
                     1986 toyota tercel
                     <br>
                     <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
-                    <img src="/images/3D/thumbnails/cardboard glorp.png">
+                    <img src="/images/3D/thumbnails/cardboard glorp.png" width="100%">
                     <br>
                     cardboard glorp cutout
                     <br>
@@ -140,21 +140,21 @@ permalink: /3D/
 
             <tr>
                 <td>
-                    <img src="/images/3D/thumbnails/warehouse.png">
+                    <img src="/images/3D/thumbnails/warehouse.png" width="100%">
                     <br>
                     warehouse map
                     <br>
                     <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
-                    <img src="/images/3D/thumbnails/hatchet.png">
+                    <img src="/images/3D/thumbnails/hatchet.png" width="100%">
                     <br>
                     rusted hatchet
                     <br>
                     <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
-                    <img src="/images/3D/thumbnails/spaceship.png">
+                    <img src="/images/3D/thumbnails/spaceship.png" width="100%">
                     <br>
                     spaceship interior prototype
                     <br>
@@ -164,21 +164,21 @@ permalink: /3D/
 
             <tr>
                 <td>
-                    <img src="/images/3D/thumbnails/revolver.png">
+                    <img src="/images/3D/thumbnails/revolver.png" width="100%">
                     <br>
                     revolver
                     <br>
                     <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
-                    <img src="/images/3D/thumbnails/laundry.png">
+                    <img src="/images/3D/thumbnails/laundry.png" width="100%">
                     <br>
                     laundry pile
                     <br>
                     <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
-                    <img src="/images/3D/thumbnails/industry-snow.png">
+                    <img src="/images/3D/thumbnails/industry-snow.png" width="100%">
                     <br>
                     snowy industrial map
                     <br>
@@ -188,14 +188,14 @@ permalink: /3D/
             
             <tr>
                 <td>
-                    <img src="/images/3D/thumbnails/thumbtack.png">
+                    <img src="/images/3D/thumbnails/thumbtack.png" width="100%">
                     <br>
                     thumbtacks
                     <br>
                     <a href="/3D/work_in_progress">{info}</a>
                 </td>
                 <td>
-                    <img src="/images/3D/thumbnails/daxthebus.png">
+                    <img src="/images/3D/thumbnails/daxthebus.png" width="100%">
                     <br>
                     dax thebus
                     <br>
