--- a/pages/home.html
+++ b/pages/home.html
@@ -48,7 +48,7 @@ permalink: /home/
 
         <script src="//code.jquery.com/jquery.min.js"></script>
         <script>
-        $.get("nav.html", function(data){
+        $.get("/nav_links", function(data){
         $("#nav_bar").replaceWith(data);
         });
         </script>
